# PowerArrPlus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: build-userscript.js  start-powerarr-plus.ps1
src-userscript/: 00-bootstrap.js  10-api-hooks.js  20-release-dedupe.js  30-row-matching.js  40-prowlarr-filters.js  50-selection.js  60-replay-actions.js  70-toolbar.js  80-main.js  metadata.user.js
src/powerarr_plus/: __init__.py  seen_filter_service.py
tests/: browser_harness.html  browser_harness_smoke.js  probe_real_duplicates.js  real_prowlarr_smoke.js  test_seen_filter.py
userscripts/: prowlarr_seen_filter.user.js
