[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "powerarr-plus"
version = "0.1.0"
description = "Local companion tools for Prowlarr and other Arr services."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PowerArrPlus Maintainers" }
]
dependencies = []

[project.scripts]
powerarr-plus-seen-filter = "powerarr_plus.seen_filter_service:main"

[tool.setuptools.packages.find]
where = ["src"]

